[gd_scene load_steps=8 format=3 uid="uid://b20l8piaphwyi"]

[ext_resource type="Script" uid="uid://qms37ycby3wa" path="res://entities/confetti/fire.gd" id="1_bpfgg"]
[ext_resource type="Texture2D" uid="uid://k7bpms8w7xyg" path="res://textures/ending@2x.png" id="2_xmyhd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1hat"]
atlas = ExtResource("2_xmyhd")
region = Rect2(2, 1120, 264, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_60nml"]
atlas = ExtResource("2_xmyhd")
region = Rect2(1314, 864, 55, 57)

[sub_resource type="Curve" id="Curve_60nml"]
_data = [Vector2(0, 0.672626), 0.0, 0.0, 0, 0, Vector2(1, 0.486024), -2.1089, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_bpfgg"]
atlas = ExtResource("2_xmyhd")
region = Rect2(1658, 774, 24, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_al6mv"]
atlas = ExtResource("2_xmyhd")
region = Rect2(1352, 766, 55, 55)

[node name="Confetti" type="Node2D"]
position = Vector2(375, 812)
script = ExtResource("1_bpfgg")

[node name="mask" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(0, -277)
scale = Vector2(3.52, 2.17)
texture = SubResource("AtlasTexture_h1hat")

[node name="wave2" type="CPUParticles2D" parent="mask"]
position = Vector2(0.284119, 145.161)
scale = Vector2(0.284091, 0.46083)
amount = 20
texture = SubResource("AtlasTexture_60nml")
lifetime = 2.0
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 9.12
gravity = Vector2(0, 1200)
initial_velocity_min = 500.0
initial_velocity_max = 1500.0
damping_max = 20.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_60nml")

[node name="wave1" type="CPUParticles2D" parent="mask"]
position = Vector2(-6.5341, 118.894)
rotation = -0.533332
scale = Vector2(0.310015, 0.443806)
skew = 0.312609
amount = 15
texture = SubResource("AtlasTexture_bpfgg")
explosiveness = 0.3
direction = Vector2(0, -1)
spread = 25.0
gravity = Vector2(0, 1500)
initial_velocity_min = 500.0
initial_velocity_max = 2000.0
damping_max = 23.502
angle_min = -152.2
angle_max = 120.5
scale_amount_min = 0.2

[node name="wave3" type="CPUParticles2D" parent="mask"]
position = Vector2(6.53408, 117.972)
rotation = 0.533332
scale = Vector2(0.310015, 0.443806)
skew = -0.312609
amount = 15
texture = SubResource("AtlasTexture_al6mv")
lifetime = 2.0
speed_scale = 0.5
explosiveness = 0.39
direction = Vector2(0, -1)
spread = 25.0
gravity = Vector2(0, 3000)
initial_velocity_min = 500.0
initial_velocity_max = 2000.0
damping_max = 23.502
angle_min = -152.2
angle_max = 120.5
scale_amount_min = 0.2
